--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "react": "^15.5.4",
     "react-copy-to-clipboard": "^4.3.0",
     "react-dom": "^15.5.4",
+    "react-measure": "^1.4.7",
     "react-on-rails": "^6.8.0",
     "react-redux": "^5.0.3",
     "react-router": "^4.0.0",
