--- a/config/database.yml
+++ b/config/database.yml
@@ -5,6 +5,7 @@
 #   gem 'sqlite3'
 #
 default: &default
+  host: db
   adapter: postgresql
   encoding: unicode
   pool: <%= ENV["DB_CONN_POOL_MAX_SIZE"] || 5 %>
