--- a/config/database.yml
+++ b/config/database.yml
@@ -67,7 +67,7 @@ production_vacols:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  username: <%= `whoami` %>
+  username: postgres
   database: caseflow_certification_test<%= ENV['TEST_ENV_NUMBER'] %>
 
 test_vacols:
